# palmdec

./: README.md  pyproject.toml
.github/workflows/: ci.yml
palmdec/: pdcReader.py
palmdec/data/: DATA_3D_NETCDF
tests/: test_pdcReader.py
